Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62075

Qml Map PluginParameter does not accept variable values

    XMLWordPrintable

Details

    Description

      The Qml Map PluginParameter does not accept variable values:

      Map {
          plugin: Plugin {
              id: plugin
              name: "osm"
      
              PluginParameter {
                  name: "test"
                  value: plugin.name // does not work: QMap(("test", QVariant(Invalid)))
                  //value: 10 // works: QMap(("test", QVariant(int, 10)))
              }
          }
      }

       

      It would be useful to set PluginParameter values from variables.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes