Fix PluginParameter not working with script as property values

This patch introduces the undocumented
QDeclarativeGeoServiceProviderParameter::initialized signal, to signal
to the parent when a parameter becomes fully initialized, so that
the parent QDeclarativeGeoServiceProvider can attach.

Task-number: QTBUG-62075
Change-Id: Ie3615abf31d19f39587c5e54b202f8f2c4a711cc
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>